--- a/api/package.json
+++ b/api/package.json
@@ -7,5 +7,8 @@
 		"mongoose": "3.8.x",
 		"body-parser": "1.5.x"
 	},
+	"devDependencies": {
+		"jasmine-node": "1.14.x"
+	},
 	"main": "src/index.js"
 }
