Adding a Backbone application

--- a/config/example.nginx.conf
+++ b/config/example.nginx.conf
@@ -31,4 +31,11 @@ server {
 		proxy_pass http://api_node_js;
 		proxy_redirect off;
 	}
+
+	location /app {
+		root /var/www/example;
+		expires	off;
+		add_header Cache-Control no-cache;
+		index	index.html;
+	}
 }
